2003-06-30  Duncan Mak  <duncan@ximian.com>

	* en/Gtk/AccelGroup.xml: Added some more hyperlinks to the
	existing text.

2003-06-26  John Luke  <jluke@cfl.rr.com>
	* en/Gtk/TreeView.xml: update example, paramater references
	* en/Gtk/Toolbar.xml: update and fix methods

2003-06-23  John Luke  <jluke@cfl.rr.com>
	* en/Gtk/WindowGroup.xml: add some info
	* en/Gtk/WindowPosition.xml: update
	* en/Gtk/WindowType.xml: don't use contractions
	* en/Gtk/ToolbarChildType.xml: add first draft
	* en/Gtk/SortType.xml: update
	* en/Gtk/SizeGroupMode.xml: update
	* en/Gtk/ShadowType.xml: update
	* en/Gtk/PolicyType.xml: update
	* en/Gtk/PackType.xml: update
	* en/Gtk/Justification.xml: update
	* en/Gtk/CurveType.xml: update
	* en/Gtk/AttachOptions.xml: update

2003-06-15  John Luke  <jluke@cfl.rr.com>
    * en/Gtk/Dialog.xml: add more info, add example
    * en/Gtk/DialogFlags: add first draft

2003-06-13  John Luke  <jluke@cfl.rr.com>
    * en/Gtk/ProgressBarStyle.xml
    * en/Gtk/ProgressBarOrientation.xml
    * en/Gtk/ImageType.xml: add first drafts

2003-06-12  Hector E. Gomez Morales <hgomez_36@flashmail.com>
	* en/Gtk/Window.xml: first draft.

2003-06-12  John Luke  <jluke@cfl.rr.com>
	* en/Gtk/Image.xml: add parameter and returns references, Methods
	* en/Gtk/Window.xml: add parameter and returns references
	* en/Gtk/TreeView.xml: add RulesHint
	* en/Gtk/Stock.xml: add returns references
	* en/Gtk/Plug.xml: add first draft

2003-06-06  John Luke  <jluke@cfl.rr.com>
	* en/GConf/*.xml: add
	* en/GConf.PropertyEditors/*.xml: add

2003-06-03  John Luke  <jluke@cfl.rr.com>
	* README: update instructions to compile and install docs

2003-06-01  Lee Mallabone  <gnome@fonicmonkey.net>

	* en/*Sharp/bool*.xml: Remove more internal signal classes.
	* en/*Sharp/*Native.xml: Remove non-public signal classes.

2003-05-30  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/ToggleButton.xml: Fix typo, bulleted list.
	* en/Gtk/Progress.xml: Fix typo.
	* en/Gtk/Tooltips.xml: Fix method signature.