@@ -1,3 +1,7 @@
+2003-07-02  John Luke  <jluke@cfl.rr.com>
+
+	* en/Gtk/TreeSelection.xml: fix method signatures, small updates
+
 2003-06-30  Duncan Mak  <duncan@ximian.com>
 
 	* en/Gtk/AccelGroup.xml: Added some more hyperlinks to the
